# tap-tixly

./: LICENSE  README.md  meltano.yml  pyproject.toml
tap_tixly/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
